test/fail_compilation/fail184.d
/*
TEST_OUTPUT:
---
fail_compilation/fail184.d(8): Error: redundant storage class 'final'
---
*/

final final int x;
